--- a/src/view/css/principal.css
+++ b/src/view/css/principal.css
@@ -42,4 +42,19 @@ nav ul li a {
 
 nav ul li a:hover {
     font-weight: bold;
+    color: #455ee9;
+}
+
+.div-login{
+    margin-top: 10%;
+    margin-left: 35%;
+    margin-right: 35%;
+    align-items: center;
+    padding-top: 1%;
+    padding-left: 4%;
+    padding-right: 4%;
+    padding-bottom: 5%;
+    background-color: red;
+    border-radius: 24px;
+    border: #001b69 8px solid;
 }
